[iOS] The web process should inherit application state from UI process https://bugs.webkit.org/show_bug.cgi?id=169156 <rdar://problem/30845473>

Reviewed by Alexey Proskuryakov.

* Platform/spi/ios/CelestialSPI.h: Added.

* WebKit2.xcodeproj/project.pbxproj: Include CelestialSPI.h.

* WebProcess/EntryPoint/mac/XPCService/WebContentService/Info-iOS.plist: Add entitlement.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::platformInitialize): Set up PID proxying.


Canonical link: https://commits.webkit.org/186194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213430 268f45cc-cd09-0410-ab3c-d52691b4dbfc